sfdx-source/packaged/main/core/objects/BankAccount__c/fields/BankAccountOwner__c.field-meta.xml
<CustomField>
    <fullName>BankAccountOwner__c</fullName>
    <description>Official Owner of the Bank Account</description>
    <inlineHelpText>Enter Owner of Bank Account</inlineHelpText>
    <label>Bank Account Owner</label>
    <required>true</required>
    <type>Text</type>
    <length>100</length>
</CustomField>