sfdx-source/packaged/main/core/objects/BankAccount__c/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <description>Readable name of the bank. Will be printed on Invoice.</description>
    <inlineHelpText>Enter the displayed name of the bank.</inlineHelpText>
    <label>Bank Name</label>
    <required>true</required>
    <type>Text</type>
    <length>50</length>
</CustomField>