sfdx-source/packaged/main/core/objects/BankAccount__c/fields/BankNameFull__c.field-meta.xml
<CustomField>
    <fullName>BankNameFull__c</fullName>
    <description>Full legal name of the bank. Use this if printable name is too long.</description>
    <inlineHelpText>Enter full legal name of the bank</inlineHelpText>
    <label>Bank Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>