sfdx-source/packaged/main/core/objects/BankAccount__c/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <description>Activates this bank account as default. The default bank account will be used when creating invoices.</description>
    <inlineHelpText>Activate to use this as your default bank account for all invoices.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>